--- a/views/landing-page.html
+++ b/views/landing-page.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous"
   />
 
-  <link rel="stylesheet" href="../css/landing.css">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     
