--- a/css/styles.css
+++ b/css/styles.css
@@ -12,3 +12,12 @@
     cursor: pointer;
     
 }
+
+#logout{
+    fill: #fff;
+    width: 70px;
+    max-width: 70px;
+    height: 70px;
+    max-height: 70px;
+    cursor: pointer;
+}
