--- a/views/landing-page.html
+++ b/views/landing-page.html
@@ -1,80 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-    crossorigin="anonymous"
-  />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
 
-  <link rel="stylesheet" href="../css/styles.css">
-</head>
-<body>
-    
-  <div id="app" >
-    <nav class="navbar navbar-expand-lg bg-dark fluid">
-      <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">App Users</a>
-        
-            <span class="d-flex justify-content-end align-content-center align-items-center">
-            <h6 class="nav-item">
-              <a class="nav-link text-white" href="#">Victor Aristizabal</a>
-            </h6>
-            <h6 class="nav-item">
-              <img src="https://images.pexels.com/photos/64385/pexels-photo-64385.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="nav-link img-thumbnail  ms-5 me-3 text-white rounded-circle" id="img-profile" styles="heigth: 10px, width: 10px" href="#" />
-            </h6>
+    <link rel="stylesheet" href="../css/styles.css" />
+  </head>
+  <body>
+    <div id="app">
+      <nav class="navbar navbar-expand-lg bg-dark fluid">
+        <div class="container-fluid">
+          <a class="navbar-brand text-white">App Users</a>
+
+          <span
+            class="d-flex justify-content-end align-content-center align-items-center"
+          >
+            <h6
+              class="nav-item text-white"
+              v-text="currentLoguedUser[0].name + ' '+ currentLoguedUser[0].lastname"
+            ></h6>
+
+            <img
+              :src="currentLoguedUser[0].img" alt="user"
+              class="nav-item nav-link img-thumbnail ms-5 me-1 text-white rounded-circle"
+              id="img-profile"
+              styles="heigth: 10px, width: 10px"
+            />
+
+           <a class="ms-2 text-decoration-none text-white" href="../index.html">Logout <img src="../assets/logout.svg" alt="logout" id="logout" class="text-white"> </a> 
           </span>
-           
+        </div>
+      </nav>
+
+      <div class="container">
+        <table class="table mt-4 mb-5">
+          <thead>
+            <tr style="background: #262626" class="text-center text-white">
+              <th scope="col">Item</th>
+              <th scope="col">Nombres</th>
+              <th scope="col">Apellidos</th>
+              <th scope="col">Ciudad</th>
+              <th scope="col">Email</th>
+              <th scope="col">Género</th>
+              <th scope="col">Perfil</th>
+              <th scope="col">Eliminar</th>
+            </tr>
+          </thead>
+          <tbody v-for="(user,i) in filteredUsers">
+            <tr style="background: #fff" class="text-center text-dark">
+              <td v-text="i + 1"></td>
+              <td v-text="user.name"></td>
+              <td v-text="user.lastname"></td>
+              <td v-text="user.city"></td>
+              <td v-text="user.email"></td>
+              <td v-text="user.gender"></td>
+              <td><img class="rounded-circle" :src="user.img" alt="" /></td>
+              <td>
+                <button
+                  class="shadow btn btn-danger btn-sm"
+                  @click="deleteAlert(user)"
+                >
+                  X
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-    </nav>
-
-    <div class="container">
-
-    <table    class="table mt-4 mb-5"  >
-      <thead>
-        <tr
-          style="background: #262626"
-          class="text-center text-white"
-        >
-          <th scope="col">Item</th>
-          <th scope="col">Nombres</th>
-          <th scope="col">Apellidos</th>
-          <th scope="col">País</th>
-          <th scope="col">Perfil</th>
-          <th scope="col">Eliminar</th>
-        </tr>
-      </thead>
-      <tbody  >
-        <tr
-          style="background: #fff"
-          class="text-center text-dark"
-        
-        >
-          <td ></td>
-          <td   ></td>
-          <td  ></td>
-          <td  ></td>
-          <td  ></td>
-          <td>
-              <button  class="shadow btn btn-danger btn-sm " @click="deleteAlert">X</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  </div>
-
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="../js/landing.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -82,6 +93,9 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-</body>
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+      integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
